--- a/app/src/main/res/layout/activity_lesson.xml
+++ b/app/src/main/res/layout/activity_lesson.xml
@@ -12,9 +12,12 @@
         android:layout_height="wrap_content"
         android:background="@color/BlueGrey50"
         android:elevation="2dp"
-        app:contentInsetStartWithNavigation="0dp"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" >
+        android:theme="?attr/actionBarTheme"
+        app:contentInsetStartWithNavigation="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ProgressBar
             android:id="@+id/progress_bar_lesson"
@@ -73,6 +76,7 @@
             android:layout_marginBottom="8dp"
             android:orientation="horizontal"
             android:paddingLeft="4dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/progress_lesson"
             app:layout_constraintStart_toStartOf="parent"
