--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -20,7 +20,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:context=".controllers.LearnFragment">
 
@@ -355,7 +355,7 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text="Date complexe"
+                            android:text="@string/date_complexe"
                             android:textColor="@color/white"
                             android:textSize="20sp"
                             android:textStyle="bold"
@@ -434,7 +434,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="2dp"
-                            android:text="Lectie noua"
+                            android:text="@string/lec_ie_nou"
                             android:textColor="@color/white"
                             android:textSize="20sp"
                             android:textStyle="bold"
